tests/typechecker/fail/015-while-do.hyg
while "test" do {
    println("Hello!")
}
